# ming-os

./: Cargo.toml  README.md  build.rs  fs.json
ming-os-kernel/: Cargo.toml  build.rs
ming-os-kernel/.cargo/: config.toml
ming-os-kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  messages.rs  mouse.rs  serial.rs  themes.rs  window_likes.rs  window_manager.rs
ming-os-kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs  rsdp.rs
ming-os-kernel/src/components/: ]  button.rs  highlight_button.rs  mod.rs  toggle_button.rs
ming-os-kernel/src/window_likes/: desktop_background.rs  lock_screen.rs  minesweeper.rs  mod.rs  start_menu.rs  taskbar.rs  workspace_indicator.rs
src/: main.rs
