[package]
name = "ming-os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.7"
ming-os-kernel = { path = "ming-os-kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]

[workspace]
members = ["ming-os-kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
