[package]
name = "ming-os-kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bmp-rust = "0.4.1"

[dependencies]
bootloader_api = "0.11"
linked_list_allocator = "0.9.0"
x86_64 = "0.14.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
acpi = "5.0.0"
x2apic = "0.4.3"

